--- a/src/ngx-tree-select/src/components/tree-select-item.component.scss
+++ b/src/ngx-tree-select/src/components/tree-select-item.component.scss
@@ -9,6 +9,15 @@ $hover-text-color: #fff;
 
   ul {
     list-style-type: none;
+    padding-left: 1.5em;
+  }
+
+  li {
+    margin-left: 0;
+  }
+
+  i {
+    width: 1em;
   }
 
   &>a {
