--- a/src/demo/app/hierarchical/hierarchical.component.html
+++ b/src/demo/app/hierarchical/hierarchical.component.html
@@ -8,7 +8,7 @@
       <form novalidate>
         <tree-select name="simpleSelect" [items]="items" idField="id" textField="name" childrenField="children" [(ngModel)]="simpleSelected"
           required=true #simpleSelect="ngModel" [filterPlaceholder]="FilterPlaceholder" [allowFilter]="ShowFilter" [disabled]="Disabled"
-          [allowParentSelection]="AllowParentSelection"></tree-select>
+          [allowParentSelection]="AllowParentSelection" (itemExpanded)="itemExpanded($event)"></tree-select>
         <div *ngIf="simpleSelect.errors && (simpleSelect.dirty || simpleSelect.touched)" class="alert alert-danger">
           <div [hidden]="!simpleSelect.errors.required">Simple select is required</div>
         </div>
